fix footer spacing

--- a/style.scss
+++ b/style.scss
@@ -216,7 +216,8 @@ main {
 }
 
 .attribution {
-  position: absolute;
+  margin-top: 3rem;
+  position: relative;
   bottom: 0;
   width: 100%;
   padding: 5vh;
